--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 <body>
     <h1>Welcome to VortexLinks</h1>
     <div class="button-container">
-        <a href="https://vortexsmplugins.vercel.app/" target="_blank">Vortex SMP Plugins</a>
-        <a href="https://minecraftserverstatus.vercel.app/" target="_blank">Minecraft Server Status</a>
+        <a href="https://vortexsmplugins.vercel.app/" >Vortex SMP Plugins</a>
+        <a href="https://minecraftserverstatus.vercel.app/" >Minecraft Server Status</a>
     </div>
 </body>
 </html>
